Adding custom color to Chrome+Safari toolbars

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <!-- For toolbar color theming -->
+  <meta name="theme-color" content="#303030" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 </head>
 <body class="mat-typography mat-app-background">
   <app-root></app-root>
