--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
   <!-- For toolbar color theming -->
   <meta name="theme-color" content="#303030" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+  <!-- For search result description -->
+  <meta name="description" content="Personal website of Blake Williams showcasing projects, travels, and career highlights.">
 </head>
 <body class="mat-typography mat-app-background">
   <app-root></app-root>
