Adding keywords to index.html

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,8 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
   <!-- For search result description -->
-  <meta name="description" content="Personal website of Blake Williams showcasing projects, travels, and career highlights.">
+  <meta name="description" content="Personal website of the one true Blake Williams showcasing projects, travels, and career highlights.">
+  <meta name="keywords" content="Blake Williams, projects, travel, career info, contact info, engineer, blog, personal website, hobbies">
 </head>
 <body class="mat-typography mat-app-background">
   <app-root></app-root>
