Upgrading to Angular 17.1
Also adding Server Side Rendering to help fix Google Search Console indexing issues

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,8 @@
   <!-- For search result description -->
   <meta name="description" content="Personal website of the one true Blake Williams showcasing projects, travels, and career highlights.">
   <meta name="keywords" content="Blake Williams, projects, travel, career info, contact info, engineer, blog, personal website, hobbies">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="mat-typography mat-app-background">
   <app-root></app-root>
