Preconnecting to imgur.com
Nearly all images are hosted on imgur.com, and opening a connection to it asap can reduce time till image render by 100-300ms

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
   <meta name="keywords" content="Blake Williams, projects, travel, career info, contact info, engineer, blog, personal website, hobbies">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <!-- Pre-connecting to imgur.com speeds up time to first render, since nearly all images on the site are hosted in imgur.com. -->
+  <link rel="preconnect" href="https://imgur.com" crossorigin>
 </head>
 <body class="mat-typography mat-app-background">
   <app-root></app-root>
